--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
 .btn{
   @apply inline-flex items-center h-12 py-4 px-11 mb-3 font-medium text-white transition duration-200 rounded-md shadow-md  md:mb-0 bg-[#FF8B42] hover:bg-[#e9742b] border-0
 }
+.btn-out{
+  @apply inline-flex items-center h-12 py-4 px-11 mb-3 font-medium text-[#e9742b] transition duration-200 rounded-md shadow-md  md:mb-0 bg-transparent hover:bg-[#e9742b] hover:text-white border
+}
 
 .dot-grid {
   height: 132px;
