--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 .btn{
-  @apply inline-flex items-center h-12 py-4 px-11 mb-3 font-medium text-white transition duration-200 rounded-md shadow-md  md:mb-0 bg-[#FF8B42] hover:bg-[#e9742b] border-0
+  @apply inline-flex items-center md:h-12 h-5 md:py-4 py-1 md:px-11 px-3 mb-3 font-medium text-white transition duration-200 rounded-md shadow-md  md:mb-0 bg-[#FF8B42] hover:bg-[#e9742b] border-0
 }
 .btn-out{
   @apply inline-flex items-center h-12 py-4 px-11 mb-3 font-medium text-[#e9742b] transition duration-200 rounded-md shadow-md  md:mb-0 bg-transparent hover:bg-[#e9742b] hover:text-white border
@@ -18,6 +18,13 @@
   width: 132px;
   background-image: radial-gradient(#b5b4b4 2px, transparent 1px);
   background-size: 12px 12px;
+}
+
+
+
+a:hover{
+  text-decoration: none !important;
+  color: #e9742b;
 }
 
 
